...
    <variable
        name="viewModel"
        type="com.truethat.android.viewmodel.ReactablesPagerViewModel"
        />
  </data>
  <android.support.constraint.ConstraintLayout
      android:id="@+id/activityRootView"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      tools:context=".view.fragment.ReactablesPagerFragment"
      >

    <android.support.constraint.ConstraintLayout
...
